--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -6,7 +6,21 @@
         "cholesky": "cpp",
         "dense": "cpp",
         "geometry": "cpp",
-        "alignedvector3": "cpp"
+        "alignedvector3": "cpp",
+        "superlusupport": "cpp",
+        "*.evaluator": "cpp",
+        "*.traits": "cpp",
+        "adolcforward": "cpp",
+        "autodiff": "cpp",
+        "bvh": "cpp",
+        "eulerangles": "cpp",
+        "fft": "cpp",
+        "kroneckerproduct": "cpp",
+        "mprealsupport": "cpp",
+        "numericaldiff": "cpp",
+        "openglsupport": "cpp",
+        "specialfunctions": "cpp",
+        "splines": "cpp"
     },
     "cmake.sourceDirectory": "${workspaceFolder}/lib/Eigen/Eigen_Repo/bench/btl"
 }
